k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      pp.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: express-app
        image: quay.io/serenaflocco/buildah-assignment:8577e57db577b36c101f06f41e4d4821154354b2
        ports:
        - containerPort: 3000
