k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: app-instance
    app.kubernetes.io/name: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
